--- a/src/styles/_components.css
+++ b/src/styles/_components.css
@@ -10,28 +10,28 @@
 /* Base: partially visible, faded */
 .swiper-button-prev,
 .swiper-button-next {
-  opacity: 0.2!important;
-  transition: all 0.3s ease!important;
-  z-index: 10!important; /* stay above cards */
+  opacity: 0.2 !important;
+  transition: all 0.3s ease !important;
+  z-index: 10 !important; /* stay above cards */
 }
 
 .swiper-button-prev {
-  left: -25px!important; /* peek outside */
+  left: -25px !important; /* peek outside */
 }
 
 .swiper-button-next {
-  right: -25px!important; /* peek outside */
+  right: -25px !important; /* peek outside */
 }
 
 /* Hover on container: slide in fully and brighten */
 .swiper-button-prev:hover {
-  left: -25px!important;
-  opacity: 1!important;
+  left: -25px !important;
+  opacity: 1 !important;
 }
 
 .swiper-button-next:hover {
-  right: -25px!important;
-  opacity: 1!important;
+  right: -25px !important;
+  opacity: 1 !important;
 }
 
 /******************************************************
@@ -41,4 +41,53 @@
 .nav-link:hover {
   /* color: var(--primary-color)!important; */
   color: #ffc107;
+}
+
+/* ────────────────────────────────
+   Intro styles
+────────────────────────────────── */
+.image-holder {
+  position: relative;
+  /* width: 100%; */
+  height: 100%;
+  /* overflow: hidden; */
+}
+
+.image-holder {
+}
+.image-holder.position-relative canvas {
+  width: max-content;
+  /* height: auto !important; */
+  object-fit: cover;
+  object-position: center;
+}
+
+/* phones */
+@media screen and (max-width: 599px) {
+  .banner-quote {
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* small tablets and phones in landscape */
+  .banner-quote {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media screen and (max-width: 991px) {
+  /* tablets */
+}
+@media screen and (max-width: 1199px) {
+  /* laptops */
+}
+@media screen and (max-width: 1599px) {
+  /* desktops */
+}
+@media screen and (min-width: 1600px) {
+  /* ultra large */
 }
