--- a/src/styles/_components/Intro.module.css
+++ b/src/styles/_components/Intro.module.css
@@ -1,7 +1,5 @@
-.banner-title {
-  font-size: clamp(4rem, 5vw, 2rem, 1.5rem); /* responsive scaling */
-  /* font-size: clamp(1.5rem, 4vw, 2.5rem); */
-
+.banner-quote {
+  font-size: clamp(2rem, 5vw, 4rem);
   line-height: 1.2;
   color: var(--light-color); /* if needed */
   max-width: 900px;
@@ -9,16 +7,17 @@
   text-shadow: rgb(0, 0, 0) 1px 1px 2px;
 }
 
-.banner-title {
-  font-size: clamp(1.5rem, 4vw, 2.5rem);
-  line-height: 1.2;
-}
-
-.banner-title-half {
-  font-size: clamp(1rem, 2.5vw, 2rem); /* reduced by ~50% */
+.banner-quote-by {
+  font-size: clamp(1rem, 2.5vw, 2rem);
   line-height: 1.3;
   max-width: 900px;
   margin: 0 auto;
+}
+
+.banner-quote-ladon {
+  font-size: clamp(3rem, 5vw, 4rem);
+  color: var(--primary-color);
+  text-shadow: rgb(0, 0, 0) 1px 1px 2px;
 }
 
 .overlay-circle {
@@ -53,4 +52,31 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+/* phones */
+@media screen and (max-width: 599px) {
+}
+
+@media screen and (max-width: 767px) {
+  /* small tablets and phones in landscape */
+}
+@media screen and (max-width: 991px) {
+  /* tablets */
+  .banner-quote-ladon {
+    font-size: clamp(1rem, 4vw, 2rem);
+  }
+}
+@media screen and (max-width: 1199px) {
+  /* laptops */
+  .banner-quote {
+    font-size: clamp(1rem, 3vw, 3rem);
+  }
+}
+@media screen and (max-width: 1599px) {
+  /* desktops */
+  
+}
+@media screen and (min-width: 1600px) {
+  /* ultra large */
 }
