--- a/src/styles/_components/Intro.module.css
+++ b/src/styles/_components/Intro.module.css
@@ -5,6 +5,8 @@
   max-width: 900px;
   margin: 0 auto;
   text-shadow: rgb(0, 0, 0) 1px 1px 2px;
+  padding-left: 130px;
+  padding-right: 130px;
 }
 
 .banner-quote-by {
@@ -18,6 +20,8 @@
   font-size: clamp(3rem, 5vw, 4rem);
   color: var(--primary-color);
   text-shadow: rgb(0, 0, 0) 1px 1px 2px;
+  padding-left: 130px;
+  padding-right: 130px;
 }
 
 .overlay-circle {
@@ -70,12 +74,19 @@
 @media screen and (max-width: 1199px) {
   /* laptops */
   .banner-quote {
-    font-size: clamp(1rem, 3vw, 3rem);
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    padding-left: 130px;
+    padding-right: 130px;
+  }
+
+  .banner-quote-ladon {
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    padding-left: 130px;
+    padding-right: 130px;
   }
 }
 @media screen and (max-width: 1599px) {
   /* desktops */
-  
 }
 @media screen and (min-width: 1600px) {
   /* ultra large */
