--- a/src/styles/_components/Header.module.css
+++ b/src/styles/_components/Header.module.css
@@ -5,7 +5,8 @@
 }
 
 .bg-navbar-def {
-  background-color: rgb(22 22 30 / 0.35);
+  /* background-color: rgb(22 22 30 / 0.35); */
+  background-color: rgb(38 59 102 / 17%);
 }
 
 .bg-navbar-scrolled {
