--- a/src/styles/_components-reusables/_button.css
+++ b/src/styles/_components-reusables/_button.css
@@ -35,6 +35,7 @@
   overflow: hidden;
   z-index: 1;
   transition: all 0.3s ease;
+  user-select: none;
 }
 .btn-slide span {
   position: relative;
