--- a/src/styles/_components/Header.module.css
+++ b/src/styles/_components/Header.module.css
@@ -31,3 +31,32 @@
 .nav-link-light:hover {
   color: var(--primary-color);
 }
+
+.navbar-brand {
+  background-color: white;
+  padding: 2px;
+  border-radius: 8px;
+  overflow: hidden;
+  display: inline-block;
+  min-width: 185px;
+}
+
+.navbar-brand-logo {
+  width: 180px;
+  height: 60px;
+  object-fit: contain;
+  border-radius: 6px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+  transition: box-shadow 0.3s ease;
+}
+
+@media screen and (max-width: 599px) {
+  .navbar-brand {
+    min-width: 140px;
+  }
+
+  .navbar-brand-logo {
+    width: 140px;
+    height: 60px;
+  }
+}
