--- a/src/styles/_components.css
+++ b/src/styles/_components.css
@@ -106,6 +106,16 @@
   color: #333;
 }
 
+/* in BlogDetailsPage.module.css */
+.markdown-responsive p:first-of-type::first-letter {
+  font-size: 80px;
+  font-weight: bolder;
+  padding-top: 2px;
+  float: left; /* optional, creates drop-cap effect */
+  line-height: 1;
+  margin-right: 8px;
+}
+
 .language-markdown {
   width: 100%;
   display: block;
